Uploading Order Scenerios

--- a/src/main/java/com/tutorialsninja/automation/config/config.properties
+++ b/src/main/java/com/tutorialsninja/automation/config/config.properties
@@ -1,1 +1,5 @@
 browserName=chrome
+url=http://www.tutorialsninja.com/demo/
+username=ravi.kiran1@gmail.com
+pass=rkiran
+product=Samsung SyncMaster 941B
